# deepframe-studio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  components.json  index.html  package-lock.json  package.json  vite.config.ts
backend/: pyproject.toml  sidecar_entry.py
backend/deepframe_api/: __init__.py  app.py  effects.py  ffmpeg.py  models.py  path_tools.py  plugin_promoter.py  preview.py  script_adapters.py  sidecar.py  staxrip.py
backend/deepframe_api/resources/effects/: discovered_effects.yaml  sample_effects.yaml
backend/tests/: test_api.py  test_effects.py  test_ffmpeg_adapter.py  test_plugin_promoter.py  test_preview_render.py  test_project_model.py  test_script_adapters.py  test_staxrip.py
docs/: architecture.md  codex_tasks.md  effect_registry.md  legal_policy.md  licenses.md  roadmap.md  staxrip_bundle.md
scripts/: build_sidecar.py  import_staxrip_bundle.py  promote_plugins.py  restart_dev.sh
src/: App.tsx  data.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: deepframe-sidecar-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: StatusDot.tsx
src/lib/: commandFormat.test.ts  commandFormat.ts  effectChain.test.ts  effectChain.ts  effectGroups.test.ts  effectGroups.ts  effectRenderability.test.ts  effectRenderability.ts  effectTaxonomy.test.ts  effectTaxonomy.ts  livePreview.test.ts  livePreview.ts  mediaPreview.test.ts  mediaPreview.ts  projectFile.test.ts  projectFile.ts  utils.ts
src/services/: api.ts  dialogs.ts  (+1 more)
(+5 files in other folders)
