[package]
name = "deepframe-studio"
version = "0.2.0"
description = "DeepFrame Studio desktop shell"
authors = ["DeepFrame Studio contributors"]
edition = "2021"

[lib]
name = "deepframe_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
uuid = { version = "1", features = ["v4"] }
